# text16-hashable

./: CHANGELOG.md  LICENSE  hashable-golden.json  text16-hashable.cabal
cbits/: fnv.c
src/Data/Text16/: Hashable.hs
test/: Main.hs
