cabal-version:      2.4
name:               text16-hashable
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Plow Technologies LLC
maintainer:         alberto.valverde@plowtechnologies.net
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Text16.Hashable
    -- other-modules:
    -- other-extensions:
    build-depends:
      base >=4.13,
      text16,
      text,
      hashable
    hs-source-dirs:   src
    default-language: Haskell2010
    C-sources:         cbits/fnv.c

test-suite text16-hashable-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        text16-hashable,
        text16,
        text >= 2,
        aeson,
        hashable,
        QuickCheck
